# Mart_Project

./: compose.yaml  n.py  readme.md
inventory-service/: .env  Dockerfile  pyproject.toml
inventory-service/app/: main.py
inventory-service/app/api/: main.py
inventory-service/app/api/routes/: routes.py
inventory-service/app/consumers/: add_stock_consumer.py  initialise_inventory_consumer.py
inventory-service/app/core/: db.py
inventory-service/app/crud/: inventory_crud.py
inventory-service/app/kafka/: producer.py
inventory-service/app/models/: inventory_model.py
inventory-service/app/schema/: inventory_schema.proto  inventory_schema_pb2.py  product_schema.proto  schema_registry.py
inventory_services/: pyproject.toml
notification-services/: .env  Dockerfile  pyproject.toml
order-services/: .env  Dockerfile  pyproject.toml
payment-services/: .env  (+1 more)
product-services/: .env  Dockerfile  pyproject.toml
product-services/app/: auth.py  consumer.py  curd.py  db.py  main.py  models.py  producer.py  product_schema.proto  product_schema_pb2.py  routes.py  schema_registry.py
product-services/app/api/: deps.py  main.py
product-services/app/api/routes/: routes.py
product-services/app/core/: auth.py  settings.py
product-services/app/core/consumer/: consumer.py
product-services/app/core/producer/: producer.py
product-services/app/curd/: curd.py
product-services/app/kafka/: consumer.py
product-services/app/models/: inventory_model.py  models.py
product-services/app/schema/: product_schema.proto  product_schema_pb2.py  schema_registry.py
(+57 files in other folders)
